tests/NormalTests/paczka1/small_fuzzy/34281794.err
Error in line 6: ecZpEfb7UW A638 -2,4
Error in line 7: CqXsy8qzI A855 65,1
